# ChangeLog for dev-util/fuubar-cucumber
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Jul 2013; Hans de Graaff <graaff@gentoo.org>
  -fuubar-cucumber-0.0.13.ebuild, -fuubar-cucumber-0.0.15.ebuild,
  -fuubar-cucumber-0.0.18.ebuild:
  Cleanup.

*fuubar-cucumber-0.0.19 (28 May 2013)

  28 May 2013; Hans de Graaff <graaff@gentoo.org>
  +fuubar-cucumber-0.0.19.ebuild:
  Version bump. Also include cucumber 1.3 in the permitted versions.

  07 Nov 2012; Hans de Graaff <graaff@gentoo.org>
  fuubar-cucumber-0.0.18.ebuild:
  Fix minimal cucumber version number.

*fuubar-cucumber-0.0.18 (16 Oct 2012)

  16 Oct 2012; Hans de Graaff <graaff@gentoo.org>
  +fuubar-cucumber-0.0.18.ebuild:
  Version bump.

  23 Jul 2012; Hans de Graaff <graaff@gentoo.org>
  fuubar-cucumber-0.0.15.ebuild:
  Add ruby19.

*fuubar-cucumber-0.0.15 (02 Jan 2012)

  02 Jan 2012; Hans de Graaff <graaff@gentoo.org>
  +fuubar-cucumber-0.0.15.ebuild:
  Version bump.

*fuubar-cucumber-0.0.13 (12 Sep 2011)

  12 Sep 2011; Hans de Graaff <graaff@gentoo.org>
  +fuubar-cucumber-0.0.13.ebuild, +metadata.xml:
  Initial import.
