@@ -1,1 +1,2 @@
 DIST fuubar-cucumber-0.0.19.gem 7168 SHA256 f9ad9a3af5cd4f564f8026503d5e72e542fe136a21513c877cda368e0176d4fd SHA512 89fe7e0a260da95264bd46802b0177a08ac6391c83e0257f3429672bcf80f98aac481483c1c4b3a1e4301b7937b217ea5f7a94c13907b87f004e3e2ca519091e WHIRLPOOL 699e47e7778b1716f29b7b2787eae4105cda0f51494d63b1a17e681be71ee31140693a5bbe16152fad378ed109da3a05a21db7bd4f147e6b4efa7f95ec91801b
+DIST fuubar-cucumber-0.0.20.gem 7168 SHA256 98cf4f8b44856437dd594044b087bf44c70432daf019038c8df2589e9b6ca6a2 SHA512 9234f8e82942be8c5d1abb5c8e60075965c42eb0e26c108b72d0fb456863ea9659288710a25ff0cfedae7e42f8d9ff805d9a9b58b8e72c0493afe036e1296edf WHIRLPOOL 23b8a0f3b19e8f3ce1704ca8bff2a7441fe6ba865b750396bdaad749422243e2c9740b5bc8875196ee1a92d8beb3ec90f9cec5dde83f8173a836fb96e9bd4f7a
