@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*fuubar-cucumber-0.0.20 (29 Jul 2013)
+
+  29 Jul 2013; Hans de Graaff <graaff@gentoo.org>
+  +fuubar-cucumber-0.0.20.ebuild:
+  Version bump.
+
   29 Jul 2013; Hans de Graaff <graaff@gentoo.org>
   -fuubar-cucumber-0.0.13.ebuild, -fuubar-cucumber-0.0.15.ebuild,
   -fuubar-cucumber-0.0.18.ebuild:
